# font-py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.html  datatypes.html  fsw.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  swu.html
sphinx-docs/source/: api.rst  conf.py  datatypes.rst  fsw.rst  index.rst  swu.rst
sphinx-docs/source/_static/: custom.css
src/sutton_signwriting_font/: __init__.py  datatypes.py  db.py  fsw.py  swu.py
tests/: test_fsw.py  test_swu.py
